# autocapture_prime

./: .gitignore  AGENTS.md  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  DEV_HARNESS.md  README.md  REPO_TOC.md  SPEC.md  dev.ps1  dev.sh  full-query-accuracy-plan.md  jepa-state-layer-plugin-plan.md  mypy.ini  optimal-implementation-order-plan.md  probe.cmd  probe.ps1  project.yaml  pyproject.toml  redteam-docs-plan.md  requirements.lock.json  run.cmd  run.ps1  ten-question-no-shortcuts-workflow-plan.md
anchor/: anchors.ndjson
autocapture/: __init__.py
autocapture_nx/: __init__.py  __main__.py  cli.py  tray.py
autocapture_plugins/: mx.core.capture_win.yaml  mx.core.compression_and_verify.yaml  mx.core.egress_sanitizer.yaml  mx.core.embed_local.yaml  mx.core.export_import.yaml  mx.core.llm_local.yaml  mx.core.llm_openai_compat.yaml  mx.core.ocr_local.yaml  mx.core.retrieval_tiers.yaml  mx.core.storage_sqlite.yaml  mx.core.vector_local.yaml  mx.core.web_ui.yaml  mx.prompts.default.yaml  mx.research.default.yaml  mx.training.default.yaml
autocapture_prime/: __init__.py  cli.py  config.py
config/: __init__.py  autocapture_prime.yaml  default.json  example.autocapture_prime.yaml  plugin_locks.json  vuln_allowlist.json
contracts/: __init__.py  answer_build_input.schema.json  answer_build_output.schema.json  answer_synthesize_input.schema.json  answer_synthesize_output.schema.json  citation.schema.json  config_schema.json  diagnostics_bundle.schema.json  evaluation.schema.json  evidence.schema.json  frozen_surfaces.json  ir_pins.json  journal_schema.json  ledger_schema.json  lock.json  model_output_record.schema.json  plugin_manifest.schema.json  plugin_sdk.md  reasoning_packet.schema.json  retrieval.schema.json  run_manifest.schema.json  security.md  sst_stage_input.schema.json  sst_stage_output.schema.json  state_layer.schema.json  time_intent.schema.json  user_surface.md
docs/: AUTOCAPTURE_PRIME_MERGE_WORK_ORDER.md  AutocapturePrime_4Pillars_Upgrade_Plan.md  STAGE2_USER_QUERY_HEAVY_UNBLOCK.md  STATE.md  _codex_repo_manifest.txt  _codex_repo_review.md  assumptions_checklist.md  autocapture_mx_blueprint.md  autocapture_mx_implementation_plan.md  autocapture_nx_blueprint_final.md  autocapture_prime.md  autocapture_prime_4pillars_optimization.md  autocapture_prime_UNDER_HYPERVISOR.md  autocapture_prime_adversarial_redesign.md  autocapture_prime_codex_implementation.md  autocapture_prime_testquestions2.txt  chatgpt_export.md  codex_autocapture_prime_blueprint.md  codex_work_order_autocapture_prime_memory.md  configuration.md  fixture_pipeline_workflow.md  four-pillars-optimization-plan.md  global-kernel-existing-repo-migration.txt  handoff-stage1-contract.md  implementation_coverage_map.md  jepa plan.md  jepa-specs.md  migrations.md  mx_evidence_bundle.md  parity_matrix.md  processing-only-plugin-stack.md  promptops_contract.md  query-metrics-workflow.md  query_eval_cases.json  query_eval_cases_advanced10.json  query_eval_cases_advanced20.json  query_eval_cases_generic20.json  query_eval_cases_hard10.json  query_eval_cases_popup_regression.json  query_eval_cases_popup_regression_10.json  (+14 more)
fastapi/: __init__.py  testclient.py
plugins/: __init__.py
pydantic/: __init__.py
scripts/: preflight.sh
tests/: _fastapi_support.py  test_accessibility_smoke.py  test_acl_hardening.py  test_activity_signal_reader.py  test_adversarial_traceability_inventory.py  test_agent_queue_runner_script.py  test_anchor.py  test_anchor_schedule.py  test_answer_builder.py  test_answer_synth_vllm_localhost_plugin.py  test_artifact_manifest_lineage.py  test_atomic_write.py  test_audio_callback_queue.py  test_audio_drop_event.py  test_audio_encoding.py  test_audio_fingerprint.py  test_audit_log.py  test_autocapture_prime_cli.py  test_autocapture_prime_config_schema.py  test_avi_reader.py  test_backfill_stage2_projection_tool.py  test_backfill_state_tape_tool.py  test_backfill_uia_obs_docs_migration.py  test_backlog_closure_guard.py  test_backpressure.py  test_backup_restore.py  test_bench_batch_knobs_synthetic.py  test_blob_encryption_roundtrip.py  test_blobstore_fsync_override.py  test_blueprint_spec_validation.py  test_blueprint_validation.py  test_build_query_stress_pack.py  test_build_query_stress_pack_defaults.py  test_bundle_manager.py  test_canonical_json.py  test_canonical_payloads.py  test_capabilities_matrix_endpoint.py  test_capability_providers_multi.py  test_capability_proxy_nested_fs_policy.py  test_capture_activity_preserve_quality.py  (+534 more)
tools/: Enable-CodexCyberpunkTheme.ps1  __init__.py  audit_q40_answer_quality.py  baseline.sh  bench_batch_knobs_synthetic.py  blueprint_items.json  build_backlog_closure_map.py  build_query_stress_pack.py  check_4pillars_optimization_doc.py  check_embedder_endpoint.py  check_wsl_gpu.ps1  chronicle_codegen.py  chronicle_codegen.sh  g20.sh  (+181 more)
(+848 files in other folders)
